...
    <string name="scan_patient_qr_code">Zeskanuj QR kod pacjenta</string>
    <string name="pesel_placeholder">95011916435</string>
    <string name="fever_card">KARTA GORĄCZKOWA</string>
    <string name="add_examination">DODAJ BADANIE</string>
    <string name="examination">Badanie</string>
    <string name="recommendation_card">KARTA ZLECEŃ LEKARSKICH</string>
    <string name="add_recommendation">DODAJ ZLECENIE LEKARSKIE</string>
    <string name="observation_card">KARTA CIĄGŁEJ OBSERWACJI</string>
    <string name="add_observation">DODAJ OBSERWACJE</string>
    <string name="new_fever_card">Nowe badanie</string>
    <string name="more">WIĘCEJ</string>
    <string name="graph">WYKRES</string>
    <string name="add">DODAJ</string>
    <string name="date">data</string>
    <string name="pulse">tętno</string>
    <string name="temperature">ciepłota</string>
    <string name="recommendation">Zlecenie</string>
    <string name="recommendation_placeholder">Zlecenie 12.12.2017</string>
    <string name="observations_placeholder">Obserwacja 12.12.2017</string>
    <string name="new_recommendation_placeholder">Nowe zlecenie 12.12.2017</string>
    <string name="new_observations_placeholder">Nowa obserwacja 12.12.2017</string>
    <string name="drug">Lek:</string>
    <string name="drug_placeholder">Ketanol 100mg</string>
...
