<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/headerRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <View
            android:id="@+id/topAccentView"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorAccent" />

        <ImageView
            android:id="@+id/pageIconImageView"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:paddingBottom="20dp"
            android:src="@drawable/rounded_observations_icon" />

        <com.patientcard.views.customviews.TitilliumLightTextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/topAccentView"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/pageIconImageView"
            android:textColor="@android:color/white"
            android:textSize="21sp" />

        <com.patientcard.views.customviews.TitilliumLightTextView
            android:id="@+id/pageTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/topAccentView"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/pageIconImageView"
            android:text="@string/observation_card"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/observationsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-15dp"
        android:layout_below="@id/headerRelativeLayout"/>

    <LinearLayout
        android:id="@+id/emptyListLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerRelativeLayout"
        android:layout_centerInParent="true"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:alpha="0.5"
            android:src="@drawable/rounded_question_mark" />

        <com.patientcard.views.customviews.TitilliumRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/list_of_observations_is_empty"
            android:textColor="@color/colorPrimaryGrey"
            android:textSize="22sp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="22dp"
        android:visibility="visible"
        app:elevation="0dp"
        app:fab_addButtonColorNormal="@color/colorAccent"
        app:fab_addButtonColorPressed="@color/colorPrimary"
        app:fab_addButtonPlusIconColor="@android:color/white"
        app:srcCompat="@drawable/add_icon" />

</RelativeLayout>
