...
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/observationImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/observationsMenuFrameLayout"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/observations_icon" />

                <FrameLayout
                    android:id="@+id/observationsMenuFrameLayout"
...
